2010-05-19  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Escape in a
	  'do you want to continue' dialog should cancel.

2010-05-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ErrorTextMarker.cs: Provide
	  tooltips for message bubbles.

2010-05-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ErrorTextMarker.cs:
	* MonoDevelop.SourceEditor/SourceEditorView.cs: Improved the
	  error bubble drawing.

2010-05-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ErrorTextMarker.cs:
	* MonoDevelop.SourceEditor/SourceEditorView.cs: Expanded
	  message bubbles now overdraw lines instead of inserting
	  virtual space.

2010-05-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Implemented
	  'Bug 606978 - Warning message when undoing past save point'.

2010-05-19  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Track code
	  template API.

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Track code
	  template API and toolbox API.

2010-05-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/DropDownBox.cs:
	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs:
	* MonoDevelop.SourceEditor/DropDownBoxListWindow.cs: Improved
	  multi monitor support.

2010-05-17  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Use
	  ViActions.Join as EditorCommands.JoinWithNextLine, since
	  it's more efficient and supports joining multiple lines.

2010-05-17  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Removed debug
	  message.

2010-05-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/LanguageItemWindow.cs: Display
	  resolve errors in the tooltip.

2010-05-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ErrorTextMarker.cs: Fixed selection
	  drawing error.