@@ -1158,7 +1158,7 @@
 				defaultHandler = "MonoDevelop.Ide.Commands.ShowPreviousHandler"
 				_label = "Show Previous" 
 				_description = "Move cursor to previous error or search match"
-				macShortcut = "Meta|Shift|="
+				macShortcut = "Meta|+"
 				shortcut = "Shift|F4" />
 		
 		<Command id = "MonoDevelop.Ide.Commands.NavigationCommands.NavigateBack"
@@ -1239,14 +1239,14 @@
 				icon = "gtk-go-forward"
 				_description = "Show next window" 
 				shortcut = "Control|Page_Down"
-				macShortcut = "Meta|Shift|]" />
+				macShortcut = "Meta|}" />
 		<Command id = "MonoDevelop.Ide.Commands.WindowCommands.PrevWindow"
 				defaultHandler = "MonoDevelop.Ide.Commands.PrevWindowHandler"
 				_label = "_Previous Window"
 				icon = "gtk-go-back"
 				_description = "Show previous window"
 				shortcut = "Control|Page_Up"
-				macShortcut = "Meta|Shift|[" />
+				macShortcut = "Meta|{" />
 		<Command id = "MonoDevelop.Ide.Commands.WindowCommands.OpenWindowList"
 				defaultHandler = "MonoDevelop.Ide.Commands.OpenWindowListHandler"
 				type="radio|array"
@@ -1288,7 +1288,7 @@
 				_description = "Show help"
 				defaultHandler = "MonoDevelop.Ide.Commands.HelpHandler"
 				shortcut = "F1"
-				macShortcut = "Meta|Alt|Shift|/" />
+				macShortcut = "Meta|Alt|?" />
 		<Command id = "MonoDevelop.Ide.Commands.HelpCommands.TipOfTheDay"
 				defaultHandler = "MonoDevelop.Ide.Commands.TipOfTheDayHandler"
 				_label = "_Tip of the Day" 
